// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matching a snapshot of AuthLoader 1`] = `
<div
  className="sc-bxivhb bUZGRr sc-htpNat eDtRyC sc-bdVaJa iHZvIS"
  is={null}
>
  <div
    className="sc-krDsej itMemN sc-ifAKCX cFlEyZ sc-bdVaJa iHZvIS"
    is={null}
  >
    <h1>
      Logging in...
    </h1>
    <br />
    <span
      aria-hidden={true}
      className="fa fa-spinner fa-5x fa-pulse fa-fw"
    />
  </div>
</div>
`;

exports[`matching a snapshot of Logout 1`] = `
<div
  className="sc-bxivhb bUZGRr sc-htpNat eDtRyC sc-bdVaJa iHZvIS"
  is={null}
>
  <div
    className="sc-krDsej itMemN sc-ifAKCX cFlEyZ sc-bdVaJa csVOHI"
    is={null}
  >
    <div
      className="sc-dymIpo daugCr"
    >
      <span
        aria-hidden={true}
        className="fa fa-check-circle-o fa-5x"
      />
      <h1>
        Logout successful!
      </h1>
      <p>
        You have successfully logged out of Dicty Stock Center
      </p>
      <button
        className="large sc-kaNhvL jpxKph"
      >
        <a
          href="/"
          onClick={[Function]}
        >
          Stock Center Home
        </a>
      </button>
    </div>
  </div>
</div>
`;
